# spotbot

./: .gitignore  LICENSE  add_menus.py  body.py  config.yml  menu.py  pyproject.toml  servo_config.yml  tspottest.py  utils.py
spotbot/: App.py  GPIO.py  Servos.py  add_menus.py  file_utils.py  footer.py  serial_config.yml  servo.py  spotbot.css  spotbot.py  utils.py
spotbot/Servo/: servo_maestro.py
spotbot/Widgets/: body.py  dialog.py  menu.py  status.py
tests/: test_spotbot.py
