[tool.poetry]
name = "spotbot"
version = "0.1.0"
description = ""
authors = ["jspv <jspvgithub@twinleaf.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.18"
rich = "^12.4.4"
schema = "^0.7.5"
PyYAML = "^6.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
spotbot = "spotbot.spotbot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
