[tool.poetry]
name = "spotbot"
version = "0.1.0"
description = ""
authors = ["jspv <jspvgithub@twinleaf.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.1.18"
rich = "^12.4.4"
schema = "^0.7.5"
pyserial = "^3.5"
"RPi.GPIO" = "^0.7.1"
"ruamel.yaml" = "^0.17.21"
textual-inputs = "~=0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
spotbot = "spotbot.spotbot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
