[tool.poetry]
name = "spotbot"
version = "0.1.0"
description = ""
authors = ["jspv <jspvgithub@twinleaf.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.0.1"
schema = "^0.7.5"
pyserial = "^3.5"
"RPi.GPIO" = "^0.7.1"
"ruamel.yaml" = "^0.17.21"
textual = {extras = ["dev"], version = "^0.9.1"}
unbored = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"
rich = "^13.0.1"
textual = "^0.9.1"

[tool.poetry.scripts]
spotbot = "spotbot.spotbot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
